force-app/main/default/objects/LogXEventHandlers__mdt/LogXEventHandlers__mdt.object-meta.xml
<CustomObject>
    <description>Set the handlers for log processing.</description>
    <label>LogX Event Handler</label>
    <pluralLabel>LogX Event Handlers</pluralLabel>
</CustomObject>