force-app/main/default/objects/LogXEventHandlers__mdt/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <description>The value in the LogEventName__c field that this handler invokes on. If it invokes on any value, enter &quot;all.&quot;</description>
    <inlineHelpText>The value in the LogEventName__c field that this handler invokes on. If it invokes on any value, enter &quot;all.&quot;</inlineHelpText>
    <label>Event Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>