force-app/main/default/objects/LogXEventHandlers__mdt/fields/Extends__c.field-meta.xml
<CustomField>
    <fullName>Extends__c</fullName>
    <defaultValue>&quot;LogProcessor&quot;</defaultValue>
    <label>Extends</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LogProcessor</fullName>
                <default>true</default>
                <label>LogProcessor</label>
            </value>
            <value>
                <fullName>RequestProcessor</fullName>
            </value>
            <value>
                <fullName>ResponseProcessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>