force-app/main/default/objects/LogXEventHandlers__mdt/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>The API Name of the Apex Class or Flow that gets invoked.</description>
    <inlineHelpText>The API Name of the Apex Class or Flow that gets invoked.</inlineHelpText>
    <label>Handler</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>