force-app/main/default/objects/LogXEventHandlers__mdt/fields/ProcessOrder__c.field-meta.xml
<CustomField>
    <fullName>ProcessOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The order any dispatched handlers will fire in.</description>
    <inlineHelpText>The order any dispatched handlers will fire in.</inlineHelpText>
    <label>ProcessOrder</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>